patches/0029-counter-intel-qep-Fix-build-error-w.adc-tgpio-pwm-qep-mcan
From e809499f6af6541f70e838c619f53a16abd261ad Mon Sep 17 00:00:00 2001
From: Jarkko Nikula <jarkko.nikula@linux.intel.com>
Date: Fri, 22 Nov 2019 10:42:19 +0200
Subject: [PATCH 29/32] counter: intel-qep: Fix build error when
 !CONFIG_PM_SLEEP && CONFIG_PM
MIME-Version: 1.0
Content-Type: text/plain; charset=UTF-8
Content-Transfer-Encoding: 8bit

Fix following build error when CONFIG_PM is set but CONFIG_PM_SLEEP is
not:

drivers/counter/intel-qep.c:694:21: error: ‘intel_qep_runtime_suspend’ undeclared here (not in a function); did you mean ‘intel_qep_function_set’?
  694 |  SET_RUNTIME_PM_OPS(intel_qep_runtime_suspend, intel_qep_runtime_resume,
      |                     ^~~~~~~~~~~~~~~~~~~~~~~~~
./include/linux/pm.h:342:21: note: in definition of macro ‘SET_RUNTIME_PM_OPS’
  342 |  .runtime_suspend = suspend_fn, \
      |                     ^~~~~~~~~~
drivers/counter/intel-qep.c:694:48: error: ‘intel_qep_runtime_resume’ undeclared here (not in a function)
  694 |  SET_RUNTIME_PM_OPS(intel_qep_runtime_suspend, intel_qep_runtime_resume,
      |                                                ^~~~~~~~~~~~~~~~~~~~~~~~
./include/linux/pm.h:343:20: note: in definition of macro ‘SET_RUNTIME_PM_OPS’
  343 |  .runtime_resume = resume_fn, \
      |                    ^~~~~~~~~

Signed-off-by: Jarkko Nikula <jarkko.nikula@linux.intel.com>
---
 drivers/counter/intel-qep.c | 2 ++
 1 file changed, 2 insertions(+)

diff --git a/drivers/counter/intel-qep.c b/drivers/counter/intel-qep.c
index 35ec619ac25e..298aecb8b218 100644
--- a/drivers/counter/intel-qep.c
+++ b/drivers/counter/intel-qep.c
@@ -671,7 +671,9 @@ static int intel_qep_resume(struct device *dev)
 
 	return 0;
 }
+#endif
 
+#ifdef CONFIG_PM
 static int intel_qep_runtime_suspend(struct device *dev)
 {
 	return 0;
-- 
2.17.1

